--- a/JobBoardSample.Shared/Components/PositionCard.razor
+++ b/JobBoardSample.Shared/Components/PositionCard.razor
@@ -1,12 +1,20 @@
 ﻿<div class="position-card">
-    <h3>PositionCard</h3>
+    <h4>@position.Title</h4>
+    <p><strong>Dipartimento:</strong> @position.Department</p>
+    <p><strong>Località:</strong> @position.Location</p>
+    <p><strong>Stipendio:</strong> @position.SalaryRangeMin € - @position.SalaryRangeMax</p>
+    <p><small>Pubblicata:</small> <small> @position.PublishedAtUtc.ToShortDateString() </small></p>
+    <button @onclick="ApplyClicked">Candidati</button>
 </div>
 
 @code {
     [Parameter]
-    public Position position { get; set; }
+    public Position position { get; set; } = new();
 
+    void ApplyClicked()
+    {
 
+    }
 
     //evento click
 }
